--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="option_no">No</string>
 
     <string name="degree">&#xb0;</string>
+    <string name="nav_concept">Nav Concept</string>
 </resources>
